core/src/com/polyfx/jssembly/platforms/x64/x64Parser.java
// $ANTLR 3.5.2 F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g 2014-08-19 13:06:12

    package com.polyfx.jssembly.platforms.x64;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class x64Parser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "HEX_DIGIT", "I16", "I32", "I64", 
		"I8", "INSTRUCTION", "MEM16", "MEM32", "MEM64", "MEM8", "MNEMONIC", "NL", 
		"REG16", "REG32", "REG64", "REG8", "WS", "'ah'", "'al'", "'ax'", "'bh'", 
		"'bl'", "'bp'", "'bx'", "'ch'", "'cl'", "'cx'", "'dh'", "'di'", "'dl'", 
		"'dx'", "'eax'", "'ebp'", "'ebx'", "'ecx'", "'edi'", "'edx'", "'esi'", 
		"'esp'", "'inc'", "'iret'", "'iretd'", "'iretq'", "'nop'", "'r10'", "'r11'", 
		"'r12'", "'r13'", "'r14'", "'r15'", "'r8'", "'r9'", "'rax'", "'rbp'", 
		"'rbx'", "'rcx'", "'rdi'", "'rdx'", "'ret'", "'rsi'", "'rsp'", "'si'", 
		"'sp'"
	};
	public static final int EOF=-1;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int T__55=55;
	public static final int T__56=56;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int T__63=63;
	public static final int T__64=64;
	public static final int T__65=65;
	public static final int T__66=66;
	public static final int HEX_DIGIT=4;
	public static final int I16=5;
	public static final int I32=6;
	public static final int I64=7;
	public static final int I8=8;
	public static final int INSTRUCTION=9;
	public static final int MEM16=10;
	public static final int MEM32=11;
	public static final int MEM64=12;
	public static final int MEM8=13;
	public static final int MNEMONIC=14;
	public static final int NL=15;
	public static final int REG16=16;
	public static final int REG32=17;
	public static final int REG64=18;
	public static final int REG8=19;
	public static final int WS=20;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public x64Parser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public x64Parser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return x64Parser.tokenNames; }
	@Override public String getGrammarFileName() { return "F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g"; }


	    protected void instruction(String token) {;}                    // nullary
	    protected void instruction(String token, int op1) {;}           // unary
	    protected void instruction(String token, int op1, int op2) {;}  // binary
	    // ...


	public static class start_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "start"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:43:1: start : ( assembly )? EOF ;
	public final x64Parser.start_return start() throws RecognitionException {
		x64Parser.start_return retval = new x64Parser.start_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope assembly1 =null;

		Object EOF2_tree=null;

		try {
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:44:3: ( ( assembly )? EOF )
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:44:5: ( assembly )? EOF
			{
			root_0 = (Object)adaptor.nil();


			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:44:5: ( assembly )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( ((LA1_0 >= 43 && LA1_0 <= 47)||LA1_0==62) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:44:5: assembly
					{
					pushFollow(FOLLOW_assembly_in_start146);
					assembly1=assembly();
					state._fsp--;

					adaptor.addChild(root_0, assembly1.getTree());

					}
					break;

			}

			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start149); 
			EOF2_tree = (Object)adaptor.create(EOF2);
			adaptor.addChild(root_0, EOF2_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "start"


	public static class assembly_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assembly"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:47:1: assembly : ( instruction ( NL )? )+ ;
	public final x64Parser.assembly_return assembly() throws RecognitionException {
		x64Parser.assembly_return retval = new x64Parser.assembly_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NL4=null;
		ParserRuleReturnScope instruction3 =null;

		Object NL4_tree=null;

		try {
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:48:3: ( ( instruction ( NL )? )+ )
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:48:5: ( instruction ( NL )? )+
			{
			root_0 = (Object)adaptor.nil();


			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:48:5: ( instruction ( NL )? )+
			int cnt3=0;
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( ((LA3_0 >= 43 && LA3_0 <= 47)||LA3_0==62) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:48:6: instruction ( NL )?
					{
					pushFollow(FOLLOW_instruction_in_assembly166);
					instruction3=instruction();
					state._fsp--;

					adaptor.addChild(root_0, instruction3.getTree());

					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:48:18: ( NL )?
					int alt2=2;
					int LA2_0 = input.LA(1);
					if ( (LA2_0==NL) ) {
						alt2=1;
					}
					switch (alt2) {
						case 1 :
							// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:48:18: NL
							{
							NL4=(Token)match(input,NL,FOLLOW_NL_in_assembly168); 
							NL4_tree = (Object)adaptor.create(NL4);
							adaptor.addChild(root_0, NL4_tree);

							}
							break;

					}

					}
					break;

				default :
					if ( cnt3 >= 1 ) break loop3;
					EarlyExitException eee = new EarlyExitException(3, input);
					throw eee;
				}
				cnt3++;
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assembly"


	public static class instruction_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "instruction"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:51:1: instruction : ( nullary_instruction -> ^( INSTRUCTION nullary_instruction ) | unary_instruction -> ^( INSTRUCTION unary_instruction ) );
	public final x64Parser.instruction_return instruction() throws RecognitionException {
		x64Parser.instruction_return retval = new x64Parser.instruction_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope nullary_instruction5 =null;
		ParserRuleReturnScope unary_instruction6 =null;

		RewriteRuleSubtreeStream stream_nullary_instruction=new RewriteRuleSubtreeStream(adaptor,"rule nullary_instruction");
		RewriteRuleSubtreeStream stream_unary_instruction=new RewriteRuleSubtreeStream(adaptor,"rule unary_instruction");

		try {
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:52:3: ( nullary_instruction -> ^( INSTRUCTION nullary_instruction ) | unary_instruction -> ^( INSTRUCTION unary_instruction ) )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( ((LA4_0 >= 44 && LA4_0 <= 47)||LA4_0==62) ) {
				alt4=1;
			}
			else if ( (LA4_0==43) ) {
				alt4=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:52:5: nullary_instruction
					{
					pushFollow(FOLLOW_nullary_instruction_in_instruction186);
					nullary_instruction5=nullary_instruction();
					state._fsp--;

					stream_nullary_instruction.add(nullary_instruction5.getTree());
					// AST REWRITE
					// elements: nullary_instruction
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 52:25: -> ^( INSTRUCTION nullary_instruction )
					{
						// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:52:28: ^( INSTRUCTION nullary_instruction )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INSTRUCTION, "INSTRUCTION"), root_1);
						adaptor.addChild(root_1, stream_nullary_instruction.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:53:5: unary_instruction
					{
					pushFollow(FOLLOW_unary_instruction_in_instruction200);
					unary_instruction6=unary_instruction();
					state._fsp--;

					stream_unary_instruction.add(unary_instruction6.getTree());
					// AST REWRITE
					// elements: unary_instruction
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 53:23: -> ^( INSTRUCTION unary_instruction )
					{
						// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:53:26: ^( INSTRUCTION unary_instruction )
						{
						Object root_1 = (Object)adaptor.nil();
						root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INSTRUCTION, "INSTRUCTION"), root_1);
						adaptor.addChild(root_1, stream_unary_instruction.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "instruction"


	public static class nullary_instruction_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "nullary_instruction"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:56:1: nullary_instruction : o= nullary_opcode ;
	public final x64Parser.nullary_instruction_return nullary_instruction() throws RecognitionException {
		x64Parser.nullary_instruction_return retval = new x64Parser.nullary_instruction_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope o =null;


		try {
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:57:3: (o= nullary_opcode )
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:57:5: o= nullary_opcode
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_nullary_opcode_in_nullary_instruction226);
			o=nullary_opcode();
			state._fsp--;

			adaptor.addChild(root_0, o.getTree());

			 instruction((o!=null?input.toString(o.start,o.stop):null)); 
			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "nullary_instruction"


	public static class unary_instruction_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "unary_instruction"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:60:1: unary_instruction : unary_opcode ;
	public final x64Parser.unary_instruction_return unary_instruction() throws RecognitionException {
		x64Parser.unary_instruction_return retval = new x64Parser.unary_instruction_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope unary_opcode7 =null;


		try {
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:61:3: ( unary_opcode )
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:61:5: unary_opcode
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_unary_opcode_in_unary_instruction243);
			unary_opcode7=unary_opcode();
			state._fsp--;

			adaptor.addChild(root_0, unary_opcode7.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "unary_instruction"


	public static class nullary_opcode_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "nullary_opcode"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:64:1: nullary_opcode : ( 'ret' -> MNEMONIC[\"ret\"] | 'iret' -> MNEMONIC[\"iret\"] | 'iretd' -> MNEMONIC[\"iretd\"] | 'iretq' -> MNEMONIC[\"iretq\"] | 'nop' -> MNEMONIC[\"nop\"] );
	public final x64Parser.nullary_opcode_return nullary_opcode() throws RecognitionException {
		x64Parser.nullary_opcode_return retval = new x64Parser.nullary_opcode_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal8=null;
		Token string_literal9=null;
		Token string_literal10=null;
		Token string_literal11=null;
		Token string_literal12=null;

		Object string_literal8_tree=null;
		Object string_literal9_tree=null;
		Object string_literal10_tree=null;
		Object string_literal11_tree=null;
		Object string_literal12_tree=null;
		RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
		RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
		RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
		RewriteRuleTokenStream stream_46=new RewriteRuleTokenStream(adaptor,"token 46");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");

		try {
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:65:3: ( 'ret' -> MNEMONIC[\"ret\"] | 'iret' -> MNEMONIC[\"iret\"] | 'iretd' -> MNEMONIC[\"iretd\"] | 'iretq' -> MNEMONIC[\"iretq\"] | 'nop' -> MNEMONIC[\"nop\"] )
			int alt5=5;
			switch ( input.LA(1) ) {
			case 62:
				{
				alt5=1;
				}
				break;
			case 44:
				{
				alt5=2;
				}
				break;
			case 45:
				{
				alt5=3;
				}
				break;
			case 46:
				{
				alt5=4;
				}
				break;
			case 47:
				{
				alt5=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:65:5: 'ret'
					{
					string_literal8=(Token)match(input,62,FOLLOW_62_in_nullary_opcode258);  
					stream_62.add(string_literal8);

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 65:13: -> MNEMONIC[\"ret\"]
					{
						adaptor.addChild(root_0, (Object)adaptor.create(MNEMONIC, "ret"));
					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:66:5: 'iret'
					{
					string_literal9=(Token)match(input,44,FOLLOW_44_in_nullary_opcode271);  
					stream_44.add(string_literal9);

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 66:13: -> MNEMONIC[\"iret\"]
					{
						adaptor.addChild(root_0, (Object)adaptor.create(MNEMONIC, "iret"));
					}


					retval.tree = root_0;

					}
					break;
				case 3 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:67:5: 'iretd'
					{
					string_literal10=(Token)match(input,45,FOLLOW_45_in_nullary_opcode283);  
					stream_45.add(string_literal10);

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 67:13: -> MNEMONIC[\"iretd\"]
					{
						adaptor.addChild(root_0, (Object)adaptor.create(MNEMONIC, "iretd"));
					}


					retval.tree = root_0;

					}
					break;
				case 4 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:68:5: 'iretq'
					{
					string_literal11=(Token)match(input,46,FOLLOW_46_in_nullary_opcode294);  
					stream_46.add(string_literal11);

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 68:13: -> MNEMONIC[\"iretq\"]
					{
						adaptor.addChild(root_0, (Object)adaptor.create(MNEMONIC, "iretq"));
					}


					retval.tree = root_0;

					}
					break;
				case 5 :
					// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:69:5: 'nop'
					{
					string_literal12=(Token)match(input,47,FOLLOW_47_in_nullary_opcode305);  
					stream_47.add(string_literal12);

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (Object)adaptor.nil();
					// 69:13: -> MNEMONIC[\"nop\"]
					{
						adaptor.addChild(root_0, (Object)adaptor.create(MNEMONIC, "nop"));
					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "nullary_opcode"


	public static class unary_opcode_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "unary_opcode"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:72:1: unary_opcode : 'inc' -> MNEMONIC[\"inc\"] ;
	public final x64Parser.unary_opcode_return unary_opcode() throws RecognitionException {
		x64Parser.unary_opcode_return retval = new x64Parser.unary_opcode_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal13=null;

		Object string_literal13_tree=null;
		RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");

		try {
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:73:3: ( 'inc' -> MNEMONIC[\"inc\"] )
			// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:73:5: 'inc'
			{
			string_literal13=(Token)match(input,43,FOLLOW_43_in_unary_opcode325);  
			stream_43.add(string_literal13);

			// AST REWRITE
			// elements: 
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 73:11: -> MNEMONIC[\"inc\"]
			{
				adaptor.addChild(root_0, (Object)adaptor.create(MNEMONIC, "inc"));
			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "unary_opcode"


	public static class reg8_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "reg8"
	// F:\\jssembly\\core\\src\\com\\polyfx\\jssembly\\platforms\\x64\\x64.g:88:1: reg8 : ( 'al' -> REG8[\"al\"] | 'ah' -> REG8[\"ah\"] | 'bl' -> REG8[\"bl\"] | 'bh' -> REG8[\"bh\"] | 'cl' -> REG8[\"cl\"] | 'ch' -> REG8[\"ch\"] | 'dl' -> REG8[\"dl\"] | 'dh' -> REG8[\"dh\"] );
	public final x64Parser.reg8_return reg8() throws RecognitionException {
		x64Parser.reg8_return retval = new x64Parser.reg8_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal14=null;
		Token string_literal15=null;
		Token string_literal16=null;
		Token string_literal17=null;
		Token string_literal18=null;
		Token string_literal19=null;
		Token string_literal20=null;
		Token string_literal21=null;

		Object string_literal14_tree=null;
		Object string_literal15_tree=null;
		Object string_literal16_tree=null;
		Object string_literal17_tree=null;
		Object string_literal18_tree=null;
		Object string_literal19_tree=null;
		Object string_literal20_tree=null;
		Object string_literal21_tree=null;
		RewriteRuleTokenStream stream_21=new RewriteRuleTokenStream(adaptor,"token 21");
		RewriteRuleTokenStream stream_31=new RewriteRuleTokenStream(adaptor,"token 31");
		RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
		RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
		RewriteRuleTokenStream stream_24=new RewriteRuleTokenStream(adaptor,"token 24");
		RewriteRuleTokenStream stream_25=new RewriteRuleTokenStream(adaptor,"token 25");
		RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
